--- a/手写系列.md
+++ b/手写系列.md
@@ -1,6 +1,68 @@
 ## 手写系列
 
 ### 节流防抖
+#### 节流(多次运行只执行一次)
+
+```js
+// 时间戳版本
+function throttle(fn, wait) {
+  let currentTime = Date.now();
+
+  return function() {
+    let now = Date.now();
+    let context = this;
+    let args = arguments;
+
+    // 判断两个时间相加是否大于等待时间
+    if (currentTime + now >= wait) {
+      fn.apply(context, ags);
+      currentTime = Date.now();
+    };
+  };
+};
+
+
+// 定时器版本
+function throttle(fn, wait) {
+  let timer = null;
+  return function() {
+    if (timer) clearTimeout(timer);
+    else {
+      let context = this;
+      let args = arguments;
+      timer = setTimeout(() => {
+        fn.apply(context, args);
+        timer = null;
+      }, wait);
+    };
+  };
+}
+```
+
+
+
+
+
+#### 防抖（多次调用，只执行最后一次）
+
+```js
+function debounce(fn, wait) {
+  let timer = null;
+  return function() {
+    let context = this;
+    let args = arguments;
+    if (timer) {
+      clearTimeout(timer);
+      timer = null;
+    } else {
+      timer = setTimeout(() => {
+        fn.apply(context, args);
+      }, wait);
+    }
+  }
+}
+```
+
 
 
 
