--- a/手写系列.md
+++ b/手写系列.md
@@ -67,8 +67,24 @@ function debounce(fn, wait) {
 
 
 ### new操作符
+```js
+function MyNew() {
+  // 1、创建一个空对象
+  let newObj = new Object();
 
+  // 2、设置原型 将对象的原型设置到函数上
+  let constructor = [].shift.call(arguments);
+  newObj = Object.create(constructor.prototype);
 
+  // 3、改变this指向  执行构造函数
+  let result = constructor.apply(newObj, arguments);
+
+  // 4、判断返回值类型
+  let tag = result && (typeof result === 'object' || typeof resul === 'function')
+
+  return tag ? result : newObj
+}
+```
 
 
 
