观察者、柯里化

--- a/手写系列.md
+++ b/手写系列.md
@@ -92,7 +92,46 @@ function MyNew() {
 
 
 
-### 观察者模式
+### 观察者模式（Observer）
+```js
+class Subject {
+  constructor() {
+    // 观察者列表
+    this.observerList = []
+  }
+
+  // 添加一个观察者
+  addObserver (observer) {
+    if (observer) {
+      this.observerList.push(observer)
+    }
+  }
+
+  // 删除观察者
+  removeObserver (observer) {
+    const index = this.observerList.findIndex(item => item === observer)
+    index === -1 && this.observerList.splice(index ,1)
+  }
+
+  // 通知所有观察者
+  notify() {
+    this.observerList.forEach((item) => {
+      item.update()
+    })
+  }
+}
+// 观察者类
+class Observer {
+  constructor(name) {
+    this.name = name
+  }
+
+  // 观察者接受通知  处理时间逻辑
+  update() {
+    console.log('我被通知了')
+  }
+}
+```
 
 ### 发布订阅模式
 
@@ -162,7 +201,21 @@ class EventEmitter {
 
 
 ### 函数柯里化实现
+```js
+function curry =  (func, ...arguments) => {
+  const fnLen = func.length
 
+  return function(...innerArgs) {
+    innerArgs = arguments.concat(...innerArgs)
+    if (innerArgs.length < fnLen) {
+      return curry.call(this, func, ...innerArgs)
+    } else {
+      func.apply(this, innerArgs)
+    }
+
+  }
+}
+```
 
 
 
@@ -198,6 +251,11 @@ class EventEmitter {
 ### 数组扁平化
 
 
+
+### 列表转树形结构
+
+
+### 树形结构转列表
 
 
 ### 持续更新中....
