:wrench: CI: lint忽略文件

--- a/md/手写系列.md
+++ b/md/手写系列.md
@@ -1,6 +1,7 @@
 ## 手写系列
 
 ### 节流防抖
+
 #### 节流(多次运行只执行一次)
 
 ```js
@@ -8,7 +9,7 @@
 function throttle(fn, wait) {
   let currentTime = Date.now();
 
-  return function() {
+  return function () {
     let now = Date.now();
     let context = this;
     let args = arguments;
@@ -17,15 +18,14 @@ function throttle(fn, wait) {
     if (currentTime + now >= wait) {
       fn.apply(context, ags);
       currentTime = Date.now();
-    };
+    }
   };
-};
-
+}
 
 // 定时器版本
 function throttle(fn, wait) {
   let timer = null;
-  return function() {
+  return function () {
     if (timer) clearTimeout(timer);
     else {
       let context = this;
@@ -34,21 +34,17 @@ function throttle(fn, wait) {
         fn.apply(context, args);
         timer = null;
       }, wait);
-    };
+    }
   };
 }
 ```
-
-
-
-
 
 #### 防抖（多次调用，只执行最后一次）
 
 ```js
 function debounce(fn, wait) {
   let timer = null;
-  return function() {
+  return function () {
     let context = this;
     let args = arguments;
     if (timer) {
@@ -59,14 +55,12 @@ function debounce(fn, wait) {
         fn.apply(context, args);
       }, wait);
     }
-  }
+  };
 }
 ```
 
+### new 操作符
 
-
-
-### new操作符
 ```js
 function MyNew() {
   // 1、创建一个空对象
@@ -80,55 +74,53 @@ function MyNew() {
   let result = constructor.apply(newObj, arguments);
 
   // 4、判断返回值类型
-  let tag = result && (typeof result === 'object' || typeof resul === 'function')
+  let tag =
+    result && (typeof result === 'object' || typeof resul === 'function');
 
-  return tag ? result : newObj
+  return tag ? result : newObj;
 }
 ```
 
-
-
-### call、bind、apply实现
-
-
+### call、bind、apply 实现
 
 ### 观察者模式（Observer）
+
 ```js
 class Subject {
   constructor() {
     // 观察者列表
-    this.observerList = []
+    this.observerList = [];
   }
 
   // 添加一个观察者
-  addObserver (observer) {
+  addObserver(observer) {
     if (observer) {
-      this.observerList.push(observer)
+      this.observerList.push(observer);
     }
   }
 
   // 删除观察者
-  removeObserver (observer) {
-    const index = this.observerList.findIndex(item => item === observer)
-    index === -1 && this.observerList.splice(index ,1)
+  removeObserver(observer) {
+    const index = this.observerList.findIndex((item) => item === observer);
+    index === -1 && this.observerList.splice(index, 1);
   }
 
   // 通知所有观察者
   notify() {
     this.observerList.forEach((item) => {
-      item.update()
-    })
+      item.update();
+    });
   }
 }
 // 观察者类
 class Observer {
   constructor(name) {
-    this.name = name
+    this.name = name;
   }
 
   // 观察者接受通知  处理时间逻辑
   update() {
-    console.log('我被通知了')
+    console.log('我被通知了');
   }
 }
 ```
@@ -146,24 +138,24 @@ class EventEmitter {
   on(name, callBack) {
     // 以 name 为 key  创建容器   如果有容器就不用创建
     if (!this.eventList[name]) {
-      this.eventList[name] = []
+      this.eventList[name] = [];
     }
 
     // 把事件放入容器
-    this.eventList[name].push([callBack])
-  };
+    this.eventList[name].push([callBack]);
+  }
 
   // 触发
   emit(name, data) {
     if (!this.eventList[name]) {
-      return new Error('没有找到事件！')
-    };
+      return new Error('没有找到事件！');
+    }
 
     // 从容器中取出事件进行调用
     this.eventList[name].forEach((item) => {
-      item(data)
-    })
-  };
+      item(data);
+    });
+  }
 
   // 只触发一次
   once(name, callBack) {
@@ -172,9 +164,9 @@ class EventEmitter {
     function onceFn(callBack) {
       callBack();
       this.off(name, callBack);
-    };
-    this.on(name, onceFn)
-  };
+    }
+    this.on(name, onceFn);
+  }
 
   // 关闭监听  若第二个参数没有  移除 name 下所有的事件
   off(name, callBack) {
@@ -182,25 +174,24 @@ class EventEmitter {
 
     if (callBack) {
       // 只移除对应的callBack
-      this.eventList[name] = this.eventList[name].filter((item) => {return item !== callBack});
+      this.eventList[name] = this.eventList[name].filter((item) => {
+        return item !== callBack;
+      });
 
       // name容器长度为0 直接删除整个 name 事件订阅发布
       if (this.eventList[name].length === 0) {
         delete this.eventList[name];
-      };
+      }
     } else {
       // 没有 callBack  直接删除整个 name 事件订阅发布
       delete this.eventList[name];
-    };
-
-  };
-
-};
+    }
+  }
+}
 ```
 
-
-
 ### 函数柯里化实现
+
 ```js
 function curry =  (func, ...arguments) => {
   const fnLen = func.length
@@ -217,45 +208,20 @@ function curry =  (func, ...arguments) => {
 }
 ```
 
-
-
-
 #### promise
-
-
 
 ### 实现一个队列
 
-
-
-
-
 ### 数组去重
-
-
-
-
 
 ### 深浅拷贝
 
-
-
-
-
 ### 交换两个变量的值
-
-
-
-
 
 ### 数组扁平化
 
-
-
 ### 列表转树形结构
 
-
 ### 树形结构转列表
-
 
 ### 持续更新中....
